app/assets/stylesheets/zammad.css.scss
/* ... */
  .tokenfield.form-control {
    padding-top: 8px;
  }

  .tokenfield .token .close {
    margin: 0;
    padding: 0 10px 0 5px;
    font-family: inherit;
    font-weight: 100;
    font-size: 30px;
    line-height: 1;
    color: white;
    text-shadow: none;
    opacity: .3;
    outline: none;
  }

  .tokenfield .token .close:hover {
    opacity: .5;
  }

.drox {
  color: hsl(60,1%,74%);
}

  .drox .drox-header {
    padding-bottom: 2px;
    margin-bottom: 16px;
    border-bottom: 1px solid hsl(240,4%,95%);
  }

  .drox a.create {
    margin-top: 2px;
    display: inline-block;
  }

  .drox .form-group {
    margin-bottom: 22px;
  }

  .drox .drox-body p:first-child {
    margin-top: 20px;
  }

.newTicket .templates {
  border-bottom: 1px solid hsl(240,4%,95%);
  padding-bottom: 14px;
}

.template-attributes {
  margin: 17px 0 19px;
}

  .template-attribute {
    height: 24px;
    line-height: 25px;
    padding-left: 10px;
    margin-bottom: 2px;
    font-size: 13px;
    color: hsl(198,11%,59%);
    background: hsl(197,20%,93%);
    border: 1px solid hsl(0,0%,90%);
    border-radius: 3px;
  }

    .template-attribute .key {
      text-transform: uppercase;
      margin-right: 3px;
    }

    .template-attribute .value {
      margin-left: 3px;
    }

    .template-attribute .delete {
      padding: 0 7px;
      margin-top: 4px;
      line-height: 19px;
      font-size: 28px;
      font-weight: lighter;
      opacity: .4;
    }

.customer-name {
  color: hsl(60,1%,34%);
}

.customer-email {
  margin-top: 5px;
  margin-bottom: 20px;
  display: block;
}

.qq-upload-list li {
  padding: 4px 5px 0;
  margin: 0 5px;
  color: hsl(60,1%,34%);
  font-size: 0.9em;
  line-height: auto;
  background: none;
}

.qq-upload-list li:hover {
  background: hsl(200,20%,97%);
}

.qq-upload-file {
  color: hsl(202,66%,55%);
}

.qq-upload-size {
  font-size: inherit;
}

.switchBackToUser.fit {
  background: hsl(200,87%,45%);
  color: #fff;
  height: 45px;
  padding: 0 17px;
  top: -45px;
  border-bottom: 5px solid hsl(205,90%,60%);
}
  .switchBackToUser-text {
    margin-left: 10px;
  }
  .switchBackToUser-close {
    width: 40px;
    height: 40px;
    margin-right: -10px;
  }

#app.switchBackToUserSpace {
  top: 45px;
}

.modal-dialog {
  width: 660px;
  margin-top: 35px;
  margin-bottom: 35px;
}

.modal-content {
  border-radius: 0;
  border: 1px solid hsl(0,0%,90%);
  box-shadow: none;
}

  .modal-header {
    padding: 30px 23px 23px;
    border: none;
  }

  .modal-header h1 {
    text-align: center;
  }

  .modal-close {
    padding: 23px;
    position: absolute;
    right: 0;
    top: 0;
    @extend .u-clickable;
  }

  .modal-close .close.icon {
    opacity: 0.18;
  }

  .modal-body {
    padding: 0 23px;
  }

  .modal-footer {
    padding: 23px 23px 20px;
    border: none;
  }

.caret {
  position: absolute;
  top: 50%;
  margin-top: -3px;
  right: 10px;
}

.dropdown-menu {
  margin: 0;
  padding: 0;
  width: 100%;
  color: white;
  background: none;
  border-radius: 0;
  border: none;
  box-shadow: none;
  overflow-x: hidden;
}

  .dropdown ul {
    margin: 0;
    background: hsl(234,10%,19%);
  }

  .dropdown li {
    height: 40px;
    padding: 0 15px;
  }

  .dropdown li:not(:first-child) {
    box-shadow: 0 1px rgba(255,255,255,.13) inset;
  }

  .dropdown li:hover,
  .dropdown li.is-active {
    background: hsl(205,90%,60%);
  }

    .dropdown li:not(.recipientList-controls):hover + li,
    .dropdown li.is-active + li {
      box-shadow: none;
    }

  .dropdown-menu > li > a {
    height: 40px;
    line-height: 39px;
    color: white;
  }

  .dropdown-menu > li > a:hover {
    color: white;
    background: hsl(205,90%,60%);
  }

  .dropdown.actions li {
    padding: 0;
  }

.recipientList,
.recipientList-organisationMembers {
  list-style: none;
  padding: 0;
}

  .recipientList-entry .recipientList-iconSpacer {
    width: 20px;
    margin-left: -5px;
  }

  .recipientList-entry .icon:not(.plus) {
    opacity: 0.2;
  }

  .recipientList-entry:hover .icon {
    opacity: 1;
  }

  .recipientList-name {
    margin-left: 10px;
    margin-top: 2px;
  }

  .recipientList-detail {
    opacity: 0.5;
  }

  .recipientList-icon.plus {
    margin-left: 13px;
  }

  .recipientList-new {
    background: hsl(145,51%,45%);
  }

  .dropdown .recipientList-new:hover {
    background: hsl(147,52%,43%);
  }

  li.recipientList-controls,
  li.recipientList-controls:hover {
    padding: 0;
    background: hsl(206,7%,28%);
  }

  .recipientList-backClickArea {
    height: 100%;
    float: left;
    padding: 0 10px;
  }

  .recipientList-backButton {
    padding: 5px 10px;
    font-size: 12px;
    color: white;
    border-radius: 3px;
    border: 1px solid hsl(234,10%,10%);
    box-shadow: 0 1px rgba(255,255,255,.03) inset;
  }

  .recipientList-backClickArea:active .recipientList-backButton {
    background: hsl(206,7%,25%);
    box-shadow: 0 1px rgba(0,0,0,.1) inset;
  }

  .recipientList-backButton .icon {
    margin-bottom: -2px;
  }

  .recipientList-organisationMembers {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
  }

.userInfo {
}

.userInfo .avatar {
  float: right;
  position: relative;
}
.userInfo .avatar:after {
  content: "";
  background: image_url("sprite.svg");
  background-position: -226px 0;
  right: 0;
  top: 0;
  width: 97px;
  height: 96px;
  position: absolute;
}

.userInfo-name {
  color: rgba(0,8,14,.73);
  font-size: 16px;
}

.userInfo-entry {
  margin: 20px 0;
}

.userInfo-label {
  text-transform: uppercase;
  color: #999;
  font-size: 12px;
  font-weight: normal;
  letter-spacing: 0.1em;
  margin-bottom: 6px;
}

.userInfo-value {
  word-wrap: break-word;
}

  .userInfo-value textarea {
    width: 100%;
    height: auto;
    line-height: 20px;
    border: none;
    padding: 0;
    outline: none;
    resize: none;
  }

.checkbox.form-group .checkbox {
  margin: 10px 0 0;
  margin-bottom: 15px;
}

.checkbox.form-group label {
  padding: 0 2px;
  cursor: default;
}
/* ... */

